# textAI

./: .coverage  .env  .env.example  .gitignore  .replit  AI_GM_ASYNC_OPTIMIZATION_STRATEGY.md  AI_GM_BRAIN_INTEGRATION.md  AI_GM_IMPORT_FIXES_SUMMARY.md  AI_GM_INTEGRATION_APPROACHES.md  AI_GM_INTEGRATION_GUIDE.md  AI_GM_INTEGRATION_README.md  AI_GM_INTEGRATION_STATUS.md  AI_GM_QUICK_START.md  COMPREHENSIVE_WEB_INTEGRATION_PROMPT.md  DOMAIN_SYSTEM_PHASES_5_6_7_COMPLETE.md  DOMAIN_SYSTEM_REHAUL_COMPLETE.md  Domain_System_Rehaul.txt  ENHANCED_COMBAT_INTEGRATION_PLAN.md  INTEGRATION_GUIDE.md  INVENTORY_PHASE1_COMPLETE.md  INVENTORY_PHASE2_COMPLETE.md  INVENTORY_PHASE3_COMPLETE.md  LANGCHAIN_INTEGRATION_FIX_SUMMARY.md  MAGIC_ENHANCED_ROLLS_FINAL_SUMMARY.md  MAGIC_ENHANCED_ROLLS_INTEGRATION_SUMMARY.md  NEXT_STEPS_PHASE3.md  PERSISTENCE_SYSTEM_COMPLETED.md  PHASE2_INTEGRATION_COMPLETE.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4B_COMPLETION_SUMMARY.md  PHASE_4C_COMPLETION_DOCUMENTATION.md  PHASE_4C_FINAL_COMPLETION_SUMMARY.md  README_AI_GM_LLM_INTEGRATION.md  SOPHISTICATED_INTENT_ANALYSIS_INTEGRATION_COMPLETE.md  advanced_ai_gm_server.py  ai_gm_brain_custom.py  ai_gm_combined.py  ai_gm_combined_noninteractive.py  ai_gm_combined_stable.py  ai_gm_direct_test.py  (+124 more)
app/: test_async_time_system.py  test_time_system.py  test_weather_integration.py  test_weather_system.py
attached_assets/: MAGIC_SYSTEM_IMPLEMENTATION_PLAN.md  My fantasy world.md  Pasted--DOMException-name-SyntaxError-message-An-invalid-or-illegal-string-was-specified-code-12--1746555050243.txt  README.md  (+73 more)
db/: index.ts  (+1 more)
(+397 files in other folders)
