[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
