[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "backend>=0.2.4.1",
    "celery>=5.5.2",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "numpy>=2.2.5",
    "pydantic>=2.11.4",
    "pygame-engine>=0.0.6",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "redis>=6.1.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
